--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,8 @@
     },
     "extends": ["eslint:recommended",
                  "plugin:react/recommended"],
-                 "parser": "babel-eslint",
+                 "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        
         "ecmaFeatures": {
             "jsx": true
         },
@@ -19,7 +18,8 @@
     "plugins": [
         "jest",
         "react",
-        "babel"
+        "babel",
+        "@typescript-eslint"
     ],
     "rules": {
         "operator-linebreak": "off",
