--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.12",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/redux-form": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "eslint-plugin-jest": "^24.1.3",
@@ -21,6 +27,7 @@
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
