--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-react": "^7.21.5",
     "gh-pages": "^3.1.0",
+    "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1"
   }
 }
