--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react-redux": "^7.1.12",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-form": "^8.3.1",
+    "@types/redux-logger": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "eslint-plugin-jest": "^24.1.3",
+    "formik": "^2.2.6",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -28,6 +30,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript": "^4.1.2",
